finance-service/src/main/java/com/example/financetracker/finance/api/error/AccessDeniedException.java
package com.example.financetracker.finance.api.error;

public class AccessDeniedException extends RuntimeException {

    public AccessDeniedException(String message) {
        super(message);
    }
}
